fix overlapping

--- a/css/about.css
+++ b/css/about.css
@@ -36,7 +36,6 @@ hr {
     float: left;
     width: 50%;
     padding: 10px;
-    height: 300px;
 }
 
 .column img {
